--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
-
 <head>
     <title>Why Frontend Development Sucks</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -18,5 +18,4 @@
         happens.
     </p>
 </body>
-
 </html>
